starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__unknown_enum_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    Missing::Value;\n}\n"
---
E0017 (https://starstream.nightstream.dev/errors/E0017)

  x unknown namespace `Missing`
   ,-[test.star:2:5]
 1 | fn test() {
 2 |     Missing::Value;
   :     ^^^^^^^
 3 | }
   `----
