starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__unknown_enum_variant_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nenum Message {\n    Ping,\n}\n\nfn test() {\n    Message::Pong;\n}\n"
---
E0001 (https://starstream.nightstream.dev/errors/E0001)

  x unknown name `Pong`
   ,-[test.star:6:14]
 5 | fn test() {
 6 |     Message::Pong;
   :              ^^^^
 7 | }
   `----
