starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__unknown_namespace_lowercase_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn main() {\n    let x = cardano::blockHeight();\n}\n"
---
E0017 (https://starstream.nightstream.dev/errors/E0017)

  x unknown namespace `cardano`
   ,-[test.star:2:13]
 1 | fn main() {
 2 |     let x = cardano::blockHeight();
   :             ^^^^^^^
 3 | }
   `----
