starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__unknown_struct_field_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nstruct Point {\n    x: i64,\n}\n\nfn test() {\n    Point {\n        x: 1,\n        y: 2,\n    };\n}\n"
---
starstream::type::unknown_struct_field

  x struct `Point` has no field named `y`
   ,-[test.star:8:9]
 7 |         x: 1,
 8 |         y: 2,
   :         ^
 9 |     };
   `----
