starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__unknown_struct_pattern_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    match 0 {\n        Missing::Value => {\n            ()\n        },\n    }\n}\n"
---
E0017 (https://starstream.nightstream.dev/errors/E0017)

  x unknown namespace `Missing`
   ,-[test.star:3:9]
 2 |     match 0 {
 3 |         Missing::Value => {
   :         ^^^^^^^
 4 |             ()
   `----
