starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__unknown_type_annotation_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn takes(value: Missing) {\n    value;\n}\n"
---
E0011 (https://starstream.nightstream.dev/errors/E0011)

  x unknown type annotation `Missing`
   ,-[test.star:1:17]
 1 | fn takes(value: Missing) {
   :                 ^^^^^^^
 2 |     value;
   `----
E0011 (https://starstream.nightstream.dev/errors/E0011)

  x unknown type annotation `Missing`
   ,-[test.star:1:17]
 1 | fn takes(value: Missing) {
   :                 ^^^^^^^
 2 |     value;
   `----
