starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__unknown_variable_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    missing;\n}\n"
---
E0001 (https://starstream.nightstream.dev/errors/E0001)

  x unknown name `missing`
   ,-[test.star:2:5]
 1 | fn test() {
 2 |     missing;
   :     ^^^^^^^
 3 | }
   `----
